# ChannelT

./: .gitignore  .project-settings.yml  .travis.yml  ChannelT.cabal  LICENSE  README.md  stack.yaml
Control/: Channel.hs
Control/Monad/: Channel.hs
Control/Monad/Channel/: Class.hs  Many.hs
Control/Monad/Channel/Selector/: Comachine.hs  Cotee.hs  Cowye.hs  Dimachine.hs  Empty.hs  Machine.hs  Multi.hs  Pipe.hs  Proxy.hs  Single.hs  Tee.hs  Wye.hs
Control/Monad/Trans/: Channel.hs
Control/Monad/Trans/Free/: Instances.hs
Data/: KUnit.hs
src/Control/Monad/: Channel.hs
src/Control/Monad/Channel/: Core.hs  Internal.hs
src/Control/Monad/Trans/Free/: Instances.hs
