-- The name of the package.
name:                ChannelT

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.0

-- A short (one-line) description of the package.
synopsis:            Bidirectional stream processors

-- A longer description of the package.
-- description:         

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Alexander Altman

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          alexanderaltman@me.com

-- A copyright notice.
-- copyright:           

category:            Control

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >= 1.8


library
  -- Modules exported by the library.
  exposed-modules:     Control.Monad.Channel,
                       Control.Monad.Trans.Channel,
                       Control.Monad.Channel.Class,
                       Control.Monad.Channel.Selector.Empty,
                       Control.Monad.Channel.Selector.Single,
                       Control.Monad.Channel.Selector.Pipe,
                       Control.Monad.Channel.Selector.Proxy,
                       Control.Monad.Channel.Selector.Wye,
                       Control.Monad.Channel.Selector.Tee,
                       --Control.Monad.Channel.Selector.Cowye,
                       --Control.Monad.Channel.Selector.Cotee,
                       --Control.Monad.Channel.Selector.Machine,
                       --Control.Monad.Channel.Selector.Comachine,
                       --Control.Monad.Channel.Selector.Dimachine,
                       --Control.Monad.Channel.Selector.Multi
  
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:       base, mtl, free, transformers-base
  