name:                ChannelT
version:             0.1.0.0
synopsis:            Generalized stream processors
description:         A mutual generalization of [pipes](https://hackage.haskell.org/package/pipes) and [machines](https://hackage.haskell.org/package/machines); a library for exploring a particular corner of the design space of streaming IO (and other related tasks) in Haskell.
license:             BSD3
license-file:        LICENSE
author:              Alexander Altman
maintainer:          alexanderaltman@me.com
copyright:           Copyright (c) 2015, Alexander Altman
category:            Control, Enumerator, Iteratee, Pipes, Proxies
build-type:          Simple
cabal-version:       >= 1.22

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Channel.Core
  -- other-modules:       
  build-depends:       base, mtl, free, transformers-base, mmorph
